Disable preview features